# solana-poneglyph

./: .gitignore  README.md
anchor-client/: Cargo.toml
anchor-client/src/: blocking.rs  cluster.rs  lib.rs  nonblocking.rs
backend/: .gitignore  Cargo.toml  template.env
backend/src/: main.rs
backend/src/controllers/: mod.rs
backend/src/controllers/asset/: create_v1.rs  ctrl.rs  get_v1.rs  mod.rs  state.rs
backend/src/controllers/asset/dtos/: create_v1.rs
backend/src/controllers/ticket/: create_v1.rs  ctrl.rs  get_v1.rs  mod.rs  state.rs
backend/src/controllers/ticket/dtos/: create_v1.rs  get_v1.rs  mod.rs
backend/src/controllers/ticket/pkgs/: anchor_utils.rs  mod.rs  solana_client.rs  solana_program_public_key.rs
backend/src/middlewares/: ctx.rs
backend/src/pkgs/: common.rs  ctx.rs  db_helper.rs  encrypt_utils.rs  env.rs  errors.rs  logging.rs  mod.rs  schema.rs  time.rs
backend/src/pkgs/body_parsers/: jpeg.rs
contract/: .gitignore  Anchor.toml  package.json
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: lib.rs
contract/programs/life_helper/: Cargo.toml
contract/programs/life_helper/src/: lib.rs
contract/tests/: contract.ts
docs/: README.md
scripts/: be-add.sh  be-format.sh  be-serve.sh  build-contract.sh  contract-add-dep.sh  contract-build.sh  contract-format.sh  contract-test.sh  new-sol-wallet.sh  test-contract.sh  tsbe-add.sh  tsbe-format.sh  tsbe-serve.sh  tsbe-set-idl.sh
scripts/misc/: deploy-metaplex-core.sh  get-balance.sh  new-sol-wallet.sh  set-metaplex-core.sh  solana-local-dev-validator.sh
ts-backend/: package-lock.json  package.json
ts-backend/src/: app.module.ts
ts-backend/src/contract/idl/: life_helper.json  utils.json
ts-backend/src/contract/types/: life_helper.ts  utils.ts
ts-backend/src/controllers/: controllers.module.ts
ts-backend/src/controllers/chain/: chain.module.ts
ts-backend/src/globals/app-config/: app-config.module.ts  (+1 more)
(+17 files in other folders)
