[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1" }
axum = { version = "0.7.9", features = ["macros", "multipart"] }
chrono = "0.4.39"
contract = { path = "../contract/programs/contract" }
# TODO: Can't deserialized the Oracle data from Rust anchor-client
life_helper = { path = "../contract/programs/life_helper" }
diesel = { version = "2.2.6", features = ["r2d2", "postgres", "serde_json"] }
envy = "0.4.2"
mpl-core = "0.8.0"
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "ansi"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
tokio-util = "0.7.13"
rand = "0.8.5"
rustc-serialize = "0.3.25"
rust-crypto = "0.2.36"
